# vehicle_api

./: pyproject.toml
.github/workflows/: master_vapi.yml
vehicle_api/: manage.py
vehicle_api/vehicle_api/: asgi.py  pytest.ini  settings.py  urls.py  wsgi.py
vehicle_api/vehicles/: tests.py  urls.py  views.py
vehicle_api/vehicles/serializers/: __init__.py  vehicle_make_serializer.py  vehicle_model_serializer.py  vehicle_serializer.py  vehicle_trim_serializer.py
